stage_01_load_data created

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -9,9 +9,9 @@ artifacts:
   TENSORBOARD_ROOT_LOG_DIR: tensorboard_log_dir
   CALLBACKS_DIR: callbacks
 
-source_download_path: 
+source_data_dir: 
   - ../outside_data/dog
   - ../outside_data/cat
-local_data_path: 
+local_data_dir: 
   - data/dog
   - data/cat
