--- a/config/config.yaml
+++ b/config/config.yaml
@@ -8,6 +8,7 @@ artifacts:
   BASE_LOG_DIR: base_model_dir
   TENSORBOARD_ROOT_LOG_DIR: tensorboard_log_dir
   CALLBACKS_DIR: callbacks
+  DATA_DIR: data
 
 source_data_dir: 
   - ../outside_data/dog
